[package]
name = "rkn-checker"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.2", features = ["json", "gzip"] }
tokio = { version = "1.4.0", features = ["full"] }
error-chain = "0.12.4"
url = "2.2.1"
clap = "2.33.3"
